k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-ms-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-ms-client
      version: v1
  template:
    metadata:
      labels:
        app: nest-ms-client
        version: v1
    spec:
      containers:
        - name: client
          image: wyfy/nest-ms-client:v2
          ports:
            - containerPort: 5001
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nest-ms-client
spec:
  selector:
    app: nest-ms-client
  ports:
    - name: tcp
      port: 80
      targetPort: 5001
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-ms-user-v4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-ms-user
      version: v4
  template:
    metadata:
      labels:
        app: nest-ms-user
        version: v4
    spec:
      containers:
        - name: user
          image: wyfy/nest-ms-user:v4
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-ms-user-v5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-ms-user
      version: v5
      status: delay
  template:
    metadata:
      labels:
        app: nest-ms-user
        version: v5
        status: delay
    spec:
      containers:
        - name: user
          image: wyfy/nest-ms-user:v5
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nest-ms-user
  labels:
    app: nest-ms-user-service
spec:
  selector:
    app: nest-ms-user
  ports:
    - name: tcp
      port: 80
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: nest-ms-mail
spec:
  selector:
    app: nest-ms-mail
  ports:
    - name: tcp
      port: 80
      targetPort: 5000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-ms-mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-ms-mail
  template:
    metadata:
      labels:
        app: nest-ms-mail
    spec:
      containers:
        - name: mail
          image: wyfy/nest-ms-mail:v2
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
